--- a/pandoc/report.yaml
+++ b/pandoc/report.yaml
@@ -33,8 +33,10 @@ variables:
 
 # highlight-style: pygments
 # highlight-style: kate
-highlight-style: espresso
-# highlight-style: tango
+# highlight-style: espresso
+highlight-style: tango
+# highlight-style: zenburn
+# highlight-style: breezedark
 
 reference-links: true
 
