--- a/pandoc/report.yaml
+++ b/pandoc/report.yaml
@@ -30,11 +30,14 @@ variables:
   fontfamily: sourcesanspro
   fontfamilyoptions:
   - default
+  # - semibold
+  # - light
+  # - regular
 
 # highlight-style: pygments
 # highlight-style: kate
-# highlight-style: espresso
-highlight-style: tango
+highlight-style: espresso
+# highlight-style: tango
 # highlight-style: zenburn
 # highlight-style: breezedark
 
