--- a/pandoc/refs/misc.yaml
+++ b/pandoc/refs/misc.yaml
@@ -13,8 +13,8 @@ references:
   # updated: 2022-05-05T19:31:23
 
 - title: IT用語辞典 e-Words
-  id: IT用語辞典e-Words
-  type: misc
+  id: e-words
+  type: article-journal
   URL: https://e-words.jp/
   # updated: 2022-05-05T21:14:12
 ---
