--- a/pandoc/defaults/common.yaml
+++ b/pandoc/defaults/common.yaml
@@ -5,9 +5,9 @@ citeproc: true
 # highlight-style: pygments
 # highlight-style: kate
 # highlight-style: espresso
-highlight-style: tango
+# highlight-style: tango
 # highlight-style: zenburn
-# highlight-style: breezedark
+highlight-style: breezedark
 
 number-sections: true
 
