--- a/pandoc/defaults/report-from-markdown-to-latex.yaml
+++ b/pandoc/defaults/report-from-markdown-to-latex.yaml
@@ -35,9 +35,25 @@ variables:
   - | # https://gist.github.com/wusunlab/9c85fcb7472308a474e7c3fb443639ee
     \usepackage{xcolor}
     \usepackage{soul}
-    \definecolor{inlineBG}{HTML}{F3F3F3}
+    \definecolor{inlineBG}{HTML}{D0D0D0}
     \sethlcolor{inlineBG}
     \let\OldTexttt\texttt
     \renewcommand{\texttt}[1]{\sethlcolor{inlineBG}{\ttfamily\hl{\mbox{#1}}}}
-
+  # - |
+    # \usepackage{etoolbox}
+    # \AtBeginEnvironment{quote}{\begin{tcolorbox}[sharp corners]}
+    # \AtEndEnvironment{quote}{\end{tcolorbox}}
+  - |
+    \usepackage{tcolorbox}
+    \usepackage{etoolbox}
+    \AtBeginEnvironment{quote}{
+      \begin{tcolorbox}[
+        colback=black!5!white,
+        colframe=black!75!black,
+        sharp corners,
+        boxrule=0mm,
+        leftrule=3mm,
+      ]
+    }
+    \AtEndEnvironment{quote}{\end{tcolorbox}}
 
